# reporter

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
reporter/: colors.py  metric.py  new_report.html  settings.py
reporter/metrics/: __init__.py  classification_report.py  confusion_matrix.py
reporter/template/: macros.html  report.html
src/reporter/: __init__.py  model.py  reporter.py  settings.py
src/reporter/metrics/: __init__.py  base.py  classification_report.py  confusion_matrix.py
src/reporter/template/: report.html
tests/: conftest.py  test_classification_report.py  test_confusion_matrix.py  test_reporter.py  test_src.py
